--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -207,6 +207,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.leanplum:leanplum-fcm:5.3.3'
+    implementation 'com.google.firebase:firebase-messaging:20.1.4'
 }
 
 // Run this once to be able to run the application with BUCK
