--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,9 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        maven {
+            url "https://repo.leanplum.com/"
+        }
 
         google()
         jcenter()
